{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 20,
  "lineage": "e1755054-3817-44b5-f497-69e68024e349",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904352270417:vpc/vpc-0f0637ea8d32462bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-068d276c59e20bdbb",
            "default_route_table_id": "rtb-06c22daa342da0e05",
            "default_security_group_id": "sg-08f0d23de372ca050",
            "dhcp_options_id": "dopt-018928c71602f8502",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f0637ea8d32462bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c22daa342da0e05",
            "owner_id": "904352270417",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:904352270417:instance/i-0d16441547e133fa9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d16441547e133fa9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05e309821a3cba040"
              }
            ],
            "primary_network_interface_id": "eni-05e309821a3cba040",
            "private_dns": "ip-172-31-73-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.73.11",
            "public_dns": "ec2-44-200-112-12.compute-1.amazonaws.com",
            "public_ip": "44.200.112.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cfb55d8420f75b54",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ede64db4155031af",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09279e3ec3c0b7882"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "i-0d16441547e133fa9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.my_key_pair",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904352270417:security-group/sg-09279e3ec3c0b7882",
            "description": "this is Inbound and outbound rules for your instance Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09279e3ec3c0b7882",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "904352270417",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-infra-app-sg"
            },
            "tags_all": {
              "Name": "dev-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0637ea8d32462bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "sg-09279e3ec3c0b7882",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904352270417:vpc/vpc-0f0637ea8d32462bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-068d276c59e20bdbb",
            "default_route_table_id": "rtb-06c22daa342da0e05",
            "default_security_group_id": "sg-08f0d23de372ca050",
            "dhcp_options_id": "dopt-018928c71602f8502",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f0637ea8d32462bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c22daa342da0e05",
            "owner_id": "904352270417",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:904352270417:instance/i-043e0aed6cae7c8aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043e0aed6cae7c8aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-081ba0214daf01923"
              }
            ],
            "primary_network_interface_id": "eni-081ba0214daf01923",
            "private_dns": "ip-172-31-37-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.207",
            "public_dns": "ec2-54-80-145-97.compute-1.amazonaws.com",
            "public_ip": "54.80.145.97",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-063e613f79caa16c6",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6a02c44c3ae9fac",
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c67d888b20ca070f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "i-043e0aed6cae7c8aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my_key_pair",
            "module.prod-infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:904352270417:instance/i-08744e7f45b9ef7d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08744e7f45b9ef7d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ec5e9c8f33da2f01"
              }
            ],
            "primary_network_interface_id": "eni-0ec5e9c8f33da2f01",
            "private_dns": "ip-172-31-34-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.63",
            "public_dns": "ec2-54-89-117-107.compute-1.amazonaws.com",
            "public_ip": "54.89.117.107",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02fcd674b0a6ae341",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6a02c44c3ae9fac",
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c67d888b20ca070f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "i-08744e7f45b9ef7d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my_key_pair",
            "module.prod-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904352270417:security-group/sg-0c67d888b20ca070f",
            "description": "this is Inbound and outbound rules for your instance Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c67d888b20ca070f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-infra-app-sg",
            "name_prefix": "",
            "owner_id": "904352270417",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-infra-app-sg"
            },
            "tags_all": {
              "Name": "prod-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0637ea8d32462bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "sg-0c67d888b20ca070f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.staging-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904352270417:vpc/vpc-0f0637ea8d32462bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-068d276c59e20bdbb",
            "default_route_table_id": "rtb-06c22daa342da0e05",
            "default_security_group_id": "sg-08f0d23de372ca050",
            "dhcp_options_id": "dopt-018928c71602f8502",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f0637ea8d32462bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c22daa342da0e05",
            "owner_id": "904352270417",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.staging-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:904352270417:instance/i-05663fa2786db1f7c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05663fa2786db1f7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "staging-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0711397660fbdb82a"
              }
            ],
            "primary_network_interface_id": "eni-0711397660fbdb82a",
            "private_dns": "ip-172-31-74-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.74.102",
            "public_dns": "ec2-44-200-122-117.compute-1.amazonaws.com",
            "public_ip": "44.200.122.117",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078b30a7aec1452b0",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "staging-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ede64db4155031af",
            "tags": {
              "Environment": "staging",
              "Name": "staging-infra-app-instance"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0611e8944746b5ecf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "i-05663fa2786db1f7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.staging-infra.aws_default_vpc.default",
            "module.staging-infra.aws_key_pair.my_key_pair",
            "module.staging-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.staging-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904352270417:security-group/sg-0611e8944746b5ecf",
            "description": "this is Inbound and outbound rules for your instance Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0611e8944746b5ecf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "staging-infra-app-sg",
            "name_prefix": "",
            "owner_id": "904352270417",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-infra-app-sg"
            },
            "tags_all": {
              "Name": "staging-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0637ea8d32462bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "904352270417",
            "id": "sg-0611e8944746b5ecf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.staging-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}